# v

./: .gitignore  BUILD.md  README.md  makefile
.github/: CHANGELOG.md  cppcheck.bash
.github/workflows/: cppcheck.yml  exe.yml  lint.yml  manual-build.yml  release.yml  wheels.yml
fig/: regenerate.bash
mol/: Cat1_2_CfA_Cf0.com  Cat1_TSOA_CfA_Cf0.com  Cat1_TSOA_CfA_Cf0_SPC.com  MOL_3525.ext.xyz  Si8.extended.xyz  neopentane.xyz  periodic.in  rotation0.in  rotation1.in  rotation2.in  rotation3.in
python/: MANIFEST.in  README.md  example.py  install-other.md  main.py  makefile  pyproject.toml  ruff.toml  setup.py  stdout.py
python/examples/: ex1.py  ex2.py  ex3.bash  ex3.py  ex4.py  ex_ase.py  ex_cclib.py
python/vmol/: __init__.py  __main__.py  main.py  stdout.py  vmol2.py
src/: api.c  v.c
src/math/: 3d.h  jacobi.c  matrix.c  matrix.h  mx_inv.c  rot3d.c  vec3.h  vecn.c  vecn.h  zmat.c
src/mol/: common.h  elements.h  inertia.c  intcoord.c  masses.h  mol.h  mytime.h  palette_cpk.h  palette_v.h
src/sym/: pointgroup.c  sym.h
src/v/: ac3_draw.c  ac3_print.c  ac3_read.c  ac3_read_in.c  ac3_read_out.c  ac3_read_xyz.c  bonds.c  cli.c  evr.c  evr.h  get_atpar.c  headless.c  load.c  loop.c  man.c  mode_read.c  pars.h  redraw.c  scale.c  tools.c  v.h  x.c  x.h  xinput.c
